--- a/package.json
+++ b/package.json
@@ -6,23 +6,25 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "netlify": "netlify"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "classnames": "^2.3.2",
-    "react-router-dom": "^6.4.2",
-    "use-local-storage": "^2.3.6",
     "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^2.0.12",
+    "classnames": "^2.3.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.2",
+    "use-local-storage": "^2.3.6",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
     "@vitejs/plugin-react": "^2.2.0",
-    "vite": "^3.2.0",
-    "tailwindcss": "^3.1.8"
+    "netlify-cli": "^12.0.11",
+    "tailwindcss": "^3.1.8",
+    "vite": "^3.2.0"
   }
 }
